HW5SERVER/tests/output/t2.out
lli: tmp.ll:32:15: error: '%0' defined with type 'i32' but expected 'i8'
%t0 = zext i8 %0 to i32
              ^
